# dota-keeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claude.md  create-playstore-screenshots.ps1  package-lock.json  package.json  secrets.md  vite.config.js  wdio.conf.js
.claude/: settings.local.json
.github/workflows/: android-release.yml  github-pages.yml  ios-release.yml  release-beta.yml  release.yml
assets/: .dotakeeper-icon-black.kra-autosave.kra  Dota Keeper Feature Graphic.kra  Dota Keeper Feature Graphic.kra~  Dota Keeper Feature Graphic.png~  dotakeeper-icon-black.kra
docs/: CNAME  README.md  index.html  privacy-policy.html  robots.txt  script.js  sitemap.xml  style.css
docs/steam-callback/: index.html
meta/: pre-release-testing.md
meta/autoupdate/: latest-beta.json  latest.json
meta/benchmarks/: hero_benchmarks.csv
meta/docs/: secrets.md
meta/memory/: MEMORY.md  android-release-minify-jni-crash.md
meta/spec/: README.md
meta/spec/analysis/: UC-040-view-performance-analysis.md  UC-041-filter-analysis.md  UC-042-toggle-favourite-hero.md  UC-043-mental-health-history-and-suggestions.md
meta/spec/auth/: UC-001-login-with-steam-id.md  UC-002-login-via-steam-openid.md  UC-003-logout.md
meta/spec/challenges/: UC-050-select-weekly-challenge.md  UC-051-reroll-weekly-challenges.md  UC-052-skip-weekly-challenge.md  UC-053-view-weekly-challenge-progress.md  UC-054-view-daily-challenge-progress.md  UC-055-view-challenge-history.md
meta/sprints/: sprint-plan.md
meta/stores/: apple-app-store.md  google-play.md
scripts/: fetch-mock-data.js  reset-android-emulator.ps1  screenshots.js
src/: app.css  app.d.ts  app.html
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/icons/ios/: .AppIcon-512@2x.png-autosave.kra
src-tauri/src/: analytics.rs  database.rs  items.rs  lib.rs  main.rs  opendota.rs  settings.rs  stratz.rs
src/lib/: AnalyticsConsentModal.svelte  BenchmarkTable.svelte  BottomNav.svelte  Chart.svelte  FeedbackModal.svelte  HeroIcon.svelte  HeroSelect.svelte  ItemIcon.svelte  MoodCheckin.svelte  OnboardingFlow.svelte  SkeletonLine.svelte  TitleBar.svelte  Toast.svelte  WhatsNewModal.svelte  WindowResize.svelte  analytics.js  checkin-store.js  heroes.js  i18n.js  parse-queue.svelte.js  privacy-store.svelte.js  sentry.js  toast.js  whatsNew.js
src/routes/: +layout.svelte  +page.svelte
tests/features/: pre-release.feature
tests/step-definitions/: common.steps.js  feedback.steps.js  goals.steps.js  matches.steps.js
tests/support/: hooks.js
ui-docs/: views.md
(+230 files in other folders)
