[package]
name = "dota-keeper"
version = "0.5.2"
description = "A Tauri App"
authors = ["Volthawk Software (Pty) Ltd"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dota_keeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4"] }
sentry = { version = "0.34", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"

[features]
beta = []
